--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "@types/lodash-es": "^4.17.12",
     "@vee-validate/zod": "^4.13.1",
     "@volar/vue-typescript": "^1.6.5",
-    "@vueuse/core": "^10.10.1",
+    "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "commitlint": "^19.3.0",
     "date-fns": "^3.6.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
+    "lint-staged": "^15.2.7",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.394.0",
     "nuxt": "^3.12.1",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "radix-vue": "^1.8.3",
     "shadcn-nuxt": "^0.10.4",
     "sort-package-json": "^2.10.0",
@@ -46,9 +46,10 @@
     "typescript": "^5.4.5",
     "ufo": "^1.5.3",
     "vee-validate": "^4.13.1",
-    "vue": "^3.4.27",
+    "vue": "^3.4.28",
     "vue-component-type-helpers": "^2.0.21",
     "vue-router": "^4.3.3",
+    "vue-sonner": "^1.1.2",
     "zod": "^3.23.8"
   },
   "overrides": {
